@@ -7,6 +7,8 @@
 	jit now check stack overflow on function entry and not on every push
 	mod_neko2 set MOD_NEKO=2 env var (for version detection)
 	mod_neko2 : remove Apache 2.0 error message
+	fixed fallback of interp operator overloading
+	TODO : FIX OO for JIT AS WELL
 
 2007-01-28 : 1.5.3
 	minor fixes in mod_neko multipart and POST data handling
